# SHITE

./: README.md  dodo.py  pyproject.toml
deploy/specs/: dev.yml
notebooks/: counting.ipynb  pos.yaml  sample.txt
